cat navbar center, overflow hidden fix

--- a/media/art/style_art.css
+++ b/media/art/style_art.css
@@ -133,11 +133,6 @@ a.btn:active {
 #titlename {
   font-size: 4em;
 }
-.qwf{
- display: inline;
-}
-#banana {
-}
 /*/////////// LINKS /////////////////*/
 a:link {/*unvisited link*/
   color: #DDD;}
@@ -213,29 +208,6 @@ a > img:hover {
       display: inline-block;
       padding: 30px 40px;}
 }
-/*///// NAVBAR CAT //////////////////////*/
-.cnav2{
-  list-style:none;
-  margin:0;
-  padding:0;
-  font-size:0.8em;
-  text-align:center;
-  background-color: #222222;
-  overflow: hidden;}
-.cnav2 a {
-  color: white;
-  display:inline-block;
-  padding:5px 10px;
-  text-decoration: none;
-  font-family:  "Verdana", sans-serif;line-height:10px}
-.cnav2 a:hover {
-  background-color: #ddd;
-  color: black;}
-.cnav2 a.active {
-  background-color: #ffffff;
-  color: white;}
-.cnav2 .icon {
-  display: none;}
 /*///// NAVBAR THREE 33333 //////////////////////*/
 .cnav3{
   list-style:none;
